@@ -27,9 +27,22 @@ Ext.define('iTeleskop.view.main.MainController', {
                         if (btn == "yes") {
                             // Moving to wait state
                             console.debug('Move task to wait state: ', record.get('task_id'));
+                            var data = {
+                                "user_id": Ext.getStore('user').getAt(0).data.user_id,
+                                "task_id": record.get('task_id'),
+                                "new_state": 0
+                            };
+                            record.set('state', '0');
+                            Tasks.update(data, this.updateResult, this);
+
                         } else if (btn == "no") {
                             // Delete task
+                            var data = {
+                                "user_id": Ext.getStore('user').getAt(0).data.user_id,
+                                "task_id": record.get('task_id')
+                            };
                             console.debug('Delete task: ', record.get('task_id'));
+                            Tasks.delete(data, this.deleteResult, this);
                         } else if (btn == "cancel") {
                             // do nothing
                         }
@@ -53,6 +66,26 @@ Ext.define('iTeleskop.view.main.MainController', {
                 icon: Ext.MessageBox.ERROR
             });
         }
+    },
+
+    updateResult: function(result, event, success) {
+        alert("updateResult AFTER");
+
+        // @todo: Finish task update!
+        /*
+        if (result.hasOwnProperty('failure')) {
+            Ext.toast("Update failed: " + result.msg);
+            return;
+        }
+
+        if (result.hasOwnProperty('success')) {
+            Ext.toast("Update successful: " + result.msg);
+        } */
+    },
+
+    updateResult: function(result, event, success) {
+        alert("deleteResult AFTER");
+        // @todo: Finish task deletion!
     },
 
     onConfirm: function (choice) {
